# bpmp-platform

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  design.md  go.work  go.work.sum  microservices-architecture.md  requirements.md
apps/rust/authz-control-plane/: .env.example  .gitignore  AuthZ-Platform-Dynamic-5-Layer-Design.md  Cargo.toml  README.md  docker-compose.yml  skill.md
apps/rust/authz-control-plane/.augment/skills/clean-code/: SKILL.md
apps/rust/authz-control-plane/.github/workflows/: ci.yml
apps/rust/authz-control-plane/crates/authz-app/: Cargo.toml
apps/rust/authz-control-plane/crates/authz-app/migrations/: 001_organization.sql  002_outbox.sql
apps/rust/authz-control-plane/crates/authz-app/src/: lib.rs  main.rs  telemetry.rs
apps/rust/authz-control-plane/crates/authz-app/src/application/: errors.rs  mod.rs
apps/rust/authz-control-plane/crates/authz-app/src/bootstrap/: mod.rs
apps/rust/authz-control-plane/crates/authz-app/src/domain/: errors.rs  mod.rs
apps/rust/authz-control-plane/crates/authz-app/src/infrastructure/: authz_adapter.rs  config.rs  messaging.rs  mod.rs
apps/rust/authz-control-plane/crates/authz-app/src/presentation/: envelope.rs  error.rs  mod.rs  router.rs
apps/rust/authz-control-plane/crates/authz-cli/: Cargo.toml
apps/rust/authz-control-plane/crates/authz-cli/src/: main.rs
apps/rust/authz-control-plane/crates/authz-core/: Cargo.toml
apps/rust/authz-control-plane/crates/authz-core/src/: errors.rs  ids.rs  lib.rs
apps/rust/authz-control-plane/crates/authz-core/src/models/: audit.rs  filter.rs  metadata.rs  mod.rs  policy.rs  rbac.rs  rebac.rs  resource.rs  tenant.rs
apps/rust/authz-control-plane/crates/authz-db/: Cargo.toml
apps/rust/authz-control-plane/crates/authz-db/migrations/: 001_identity.sql  002_rbac.sql  003_resource.sql  004_policy.sql  005_rebac.sql  006_filter.sql  007_audit.sql  008_triggers.sql  009_indexes.sql  010_user_last_active.sql  011_entity_metadata.sql  012_tenant_registry.sql
apps/rust/authz-control-plane/crates/authz-db/src/: lib.rs  pool.rs
apps/rust/authz-control-plane/crates/authz-db/src/repositories/: loader.rs  metadata.rs  mod.rs  policy.rs  policy_write.rs  rbac.rs  rbac_write.rs  rebac.rs  tenant.rs  tenant_write.rs
apps/rust/authz-control-plane/crates/authz-db/tests/: concurrency_contract.rs  schema_contract.rs
apps/rust/authz-control-plane/crates/authz-engine/: Cargo.toml
apps/rust/authz-control-plane/crates/authz-engine/src/: context.rs  lib.rs
apps/rust/authz-control-plane/crates/authz-engine/src/algorithms/: bitmap.rs  cuckoo.rs  iddfs.rs  interval_tree.rs  mod.rs  tests_bitmap.rs  tests_iddfs.rs  tests_interval.rs
apps/rust/authz-control-plane/crates/authz-engine/src/cache/: bundle_loader.rs  emergency_revoke.rs  mod.rs  policy_bundle.rs
apps/rust/authz-control-plane/crates/authz-engine/src/evaluator/: abac.rs  mod.rs  pipeline.rs  rebac.rs  temporal.rs
apps/rust/authz-control-plane/crates/authz-engine/src/filter/: elasticsearch.rs  field.rs  mod.rs  mongodb.rs  sql.rs  translator.rs
apps/rust/authz-control-plane/crates/authz-engine/src/shadow/: engine.rs  mod.rs
apps/rust/authz-control-plane/crates/authz-engine/tests/: integration_pipeline.rs
apps/rust/authz-control-plane/crates/authz-sdk/: Cargo.toml
apps/rust/authz-control-plane/crates/authz-sdk/src/: batch.rs  cache.rs  client.rs  envelope.rs  error.rs  lib.rs  types.rs
apps/rust/authz-control-plane/crates/authz-server/: Cargo.toml  build.rs
apps/rust/authz-control-plane/crates/authz-server/proto/: authz.proto
apps/rust/authz-control-plane/crates/authz-server/src/: app.rs  config.rs  error.rs  main.rs  state.rs
apps/rust/authz-control-plane/crates/authz-server/src/grpc/: authz_service.rs  mod.rs
apps/rust/authz-control-plane/crates/authz-server/src/handlers/: check.rs  explain.rs  filter.rs  health.rs  mod.rs  relations.rs
apps/rust/authz-control-plane/crates/authz-server/src/job/: inactive_user.rs  mod.rs
apps/rust/authz-control-plane/crates/authz-server/src/middleware/: mod.rs  request_id.rs  service_auth.rs  tracing_layer.rs
apps/rust/authz-control-plane/db/: README.md  flyway.conf.example
apps/rust/authz-control-plane/docs/: OPERATIONS_GUIDE.md
apps/rust/authz-control-plane/frontend/angular-prototype/: .gitignore  angular.json  package.json  tsconfig.json
apps/rust/authz-control-plane/frontend/angular-prototype/src/: index.html  styles.css
apps/rust/authz-control-plane/frontend/react-prototype/: index.html  package.json  tsconfig.json  vite.config.ts
apps/rust/authz-control-plane/frontend/react-prototype/src/: vite-env.d.ts
apps/rust/bpmn-compiler/: Cargo.toml
apps/rust/bpmn-compiler/src/: bpmn_profile.rs  codegen.rs  compiler.rs  diagnostic.rs  lib.rs  main.rs  printer.rs
apps/rust/bpmn-compiler/src/compiler/: graph_validation.rs  normalization.rs
apps/rust/bpmn-compiler/tests/: advanced_models.rs  cli.rs  compiler_to_engine.rs  enterprise_models.rs  human_script_tasks.rs  requirement_1_acceptance.rs  unsupported_bpmn.rs
apps/rust/bpmp-engine/: Cargo.toml
apps/rust/bpmp-engine-server/: Cargo.toml
apps/rust/bpmp-engine-server/src/: config.rs  linux_runtime.rs  main.rs
apps/rust/bpmp-engine/src/: application.rs  authorization.rs  boundary_runtime.rs  dispatch_credit.rs  event_codec.rs  governance.rs  lib.rs  local_task_runtime.rs  memory.rs  outbox.rs  ports.rs  runtime_registry.rs  snapshot_codec.rs  transport.rs  wir_loader.rs
apps/rust/bpmp-engine/tests/: engine_flow.rs
crates/bpmp-adapter-rocksdb/: Cargo.toml
crates/bpmp-adapter-rocksdb/src/: lib.rs  raft_log.rs  rocks.rs
crates/bpmp-adapter-rocksdb/tests/: raft_restart.rs
crates/bpmp-adapter-wasmtime/: Cargo.toml
crates/bpmp-adapter-wasmtime/src/: lib.rs
crates/bpmp-contracts/: Cargo.toml  build.rs
crates/bpmp-contracts/src/: lib.rs  wir_artifact.rs
crates/bpmp-raft-state-machine/: Cargo.toml
crates/bpmp-raft-state-machine/src/: lib.rs
crates/bpmp-raft-state-machine/tests/: cluster_chaos.rs  formal_model.rs
(+167 files in other folders)
