[workspace]
members = [
    "apps/rust/bpmn-compiler",
    "apps/rust/bpmp-engine",
    "crates/bpmp-authz-contracts",
    "crates/bpmp-contracts",
    "crates/bpmp-domain-core",
    "crates/bpmp-payload-crypto",
    "crates/bpmp-authz-engine",
    "crates/bpmp-adapter-policy-bundle",
    "crates/bpmp-adapter-identity-jwt",
    "crates/bpmp-adapter-rocksdb",
    "crates/bpmp-adapter-wasmtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
bpmp-contracts = { path = "crates/bpmp-contracts" }
bpmp-authz-contracts = { path = "crates/bpmp-authz-contracts" }
bpmp-domain-core = { path = "crates/bpmp-domain-core" }
bpmp-payload-crypto = { path = "crates/bpmp-payload-crypto" }
bpmp-authz-engine = { path = "crates/bpmp-authz-engine" }
bpmp-adapter-policy-bundle = { path = "crates/bpmp-adapter-policy-bundle" }
bpmp-adapter-identity-jwt = { path = "crates/bpmp-adapter-identity-jwt" }
bpmp-adapter-rocksdb = { path = "crates/bpmp-adapter-rocksdb" }
clap = { version = "4.6.2", features = ["derive"] }
ed25519-dalek = "2.2.0"
proptest = "1.9.0"
prost = "0.14.4"
quick-xml = "0.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
jsonwebtoken = "9.3.1"
sha2 = "0.11.0"
thiserror = "2.0.17"
tempfile = "3.27.0"
time = { version = "=0.3.53", features = ["parsing"] }
wasmtime = { version = "=36.0.4", default-features = false, features = ["cranelift", "runtime", "std"] }
wat = "1.236.0"
zeroize = "1.9.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
