[workspace]
members = [
    "apps/rust/bpmn-compiler",
    "apps/rust/bpmp-engine",
    "apps/rust/bpmp-engine-server",
    "crates/bpmp-authz-contracts",
    "crates/bpmp-contracts",
    "crates/bpmp-domain-core",
    "crates/bpmp-payload-crypto",
    "crates/bpmp-authz-engine",
    "crates/bpmp-adapter-policy-bundle",
    "crates/bpmp-adapter-identity-jwt",
    "crates/bpmp-adapter-rocksdb",
    "crates/bpmp-adapter-wasmtime",
    "crates/bpmp-governance-domain",
    "crates/bpmp-raft-state-machine",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
bpmp-contracts = { path = "crates/bpmp-contracts" }
bpmp-authz-contracts = { path = "crates/bpmp-authz-contracts" }
bpmp-domain-core = { path = "crates/bpmp-domain-core" }
bpmp-payload-crypto = { path = "crates/bpmp-payload-crypto" }
bpmp-authz-engine = { path = "crates/bpmp-authz-engine" }
bpmp-adapter-policy-bundle = { path = "crates/bpmp-adapter-policy-bundle" }
bpmp-adapter-identity-jwt = { path = "crates/bpmp-adapter-identity-jwt" }
bpmp-adapter-rocksdb = { path = "crates/bpmp-adapter-rocksdb" }
bpmp-governance-domain = { path = "crates/bpmp-governance-domain" }
bpmp-raft-state-machine = { path = "crates/bpmp-raft-state-machine" }
clap = { version = "4.6.2", features = ["derive", "env"] }
ed25519-dalek = "2.2.0"
proptest = "1.9.0"
prost = "0.14.4"
tonic = { version = "0.14.6", features = ["transport", "tls-ring"] }
tonic-prost = "0.14.6"
tokio = { version = "~1.51.4", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
quick-xml = "0.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
jsonwebtoken = "10.4.0"
openraft = { version = "=0.9.24", features = ["serde", "storage-v2"] }
sha2 = "0.11.0"
thiserror = "2.0.17"
tempfile = "3.27.0"
time = { version = "=0.3.53", features = ["parsing"] }
wasmtime = { version = "=36.0.4", default-features = false, features = ["cranelift", "runtime", "std"] }
wat = "1.236.0"
zeroize = "1.9.0"

[workspace.dependencies.tonic-prost-build]
version = "0.14.6"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
