[package]
name = "bpmp-adapter-rocksdb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bpmp-authz-contracts.workspace = true
bpmp-contracts.workspace = true
bpmp-domain-core.workspace = true
bpmp-engine = { path = "../../apps/rust/bpmp-engine" }
bpmp-payload-crypto.workspace = true
prost.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rocksdb = { version = "0.24.0", default-features = false, features = ["bindgen-runtime", "lz4"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
