[package]
name = "bpmp-adapter-wasmtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bpmp-domain-core.workspace = true
thiserror.workspace = true
wasmtime.workspace = true

[dev-dependencies]
proptest.workspace = true
wat.workspace = true

[lints]
workspace = true
