[package]
name = "bpmp-contracts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bpmp-authz-contracts.workspace = true
ed25519-dalek.workspace = true
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
sha2.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build = "0.14.4"
tonic-prost-build.workspace = true
protoc-bin-vendored = "3.2.0"

[lints]
workspace = true
