[package]
name = "bpmp-raft-state-machine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openraft.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
stateright = "=0.31.0"
tokio.workspace = true

[lints]
workspace = true
