[workspace]
members = [
    "crates/authz-core",
    "crates/authz-db",
    "crates/authz-engine",
    "crates/authz-server",
    "crates/authz-cli",
    "crates/authz-sdk",
    "crates/authz-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AuthZ Platform Team"]
license = "MIT"

[workspace.dependencies]
# Internal crates (workspace members) — referenced via `workspace = true`
authz-core   = { path = "crates/authz-core" }
authz-db     = { path = "crates/authz-db" }
authz-engine = { path = "crates/authz-engine" }
authz-sdk    = { path = "crates/authz-sdk" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "timeout"] }
hyper = { version = "1" }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Tracing & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"

# Caching
dashmap = "5"
moka = { version = "0.12", features = ["future"] }

# HTTP client (for JIT attribute fetching)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# JWT
jsonwebtoken = "9"

# IP address handling (for CIDR check)
ipnet = "2"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# gRPC
tonic = "0.11"
prost = "0.12"
tonic-build = "0.11"

# Rate limiting
governor = "0.6"

# Random
rand = "0.8"

# HTTP extras (TypedHeader, etc.)
axum-extra = { version = "0.9", features = ["typed-header"] }

# Headers for axum-extra
headers = "0.4"

# Prometheus exporter
prometheus = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
