[package]
name = "bpmp-engine-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "bpmp-engine"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
bpmp-adapter-identity-jwt.workspace = true
bpmp-adapter-policy-bundle.workspace = true
bpmp-adapter-wasmtime = { path = "../../../crates/bpmp-adapter-wasmtime" }
bpmp-authz-contracts.workspace = true
bpmp-contracts.workspace = true
bpmp-domain-core.workspace = true
bpmp-engine = { path = "../bpmp-engine" }
bpmp-payload-crypto.workspace = true
clap.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
bpmp-adapter-rocksdb.workspace = true
rdkafka = { version = "0.39.0", features = ["cmake-build"] }

[lints]
workspace = true
