[package]
name = "bpmp-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bpmp-authz-contracts.workspace = true
bpmp-authz-engine.workspace = true
bpmp-adapter-policy-bundle.workspace = true
bpmp-adapter-identity-jwt.workspace = true
bpmp-contracts.workspace = true
bpmp-domain-core.workspace = true
prost.workspace = true
thiserror.workspace = true
time.workspace = true
tonic.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true

[lints]
workspace = true
