[package]
name = "authz-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Application bounded context (PEP) on top of the AuthZ platform."

[dependencies]
authz-core = { workspace = true }
authz-db   = { workspace = true }
authz-sdk  = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
prometheus = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
validator = { workspace = true }

config = { workspace = true }

[[bin]]
name = "authz-app"
path = "src/main.rs"
