[package]
name = "authz-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
ipnet = { workspace = true }
validator = { workspace = true }
sqlx = { version = "0.7.4", default-features = false }
