[package]
name = "authz-engine"
version.workspace = true
edition.workspace = true

[dependencies]
authz-core = { path = "../authz-core" }
authz-db = { path = "../authz-db" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
ipnet = { workspace = true }
metrics = { workspace = true }
sqlx = "0.7.4"
chrono-tz = "0.9.0"
regex = "1.12.3"
roaring = "0.11.4"
cuckoofilter = "0.5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
