[package]
name = "authz-server"
version.workspace = true
edition.workspace = true

[dependencies]
authz-core = { path = "../authz-core" }
authz-db = { path = "../authz-db" }
authz-engine = { path = "../authz-engine" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
validator = { workspace = true }
governor = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
tower-layer = "0.3.3"
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = "3"
